# music_org_backend

./: .env  Cargo.toml  seed.rs  seedbak.rs
src/: main.rs
src/db/: genre.rs  sets.rs
