[package]
name = "webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio-native-tls", "uuid"] }
tokio = { version = "1.47.1", features = ["full", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
uuid = { version = "1.18.1", features = ["v4"] }
